--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,26 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.big-text {
+  font-size: 3em;
+}
+</style>
+</head>
+<body>
+
+<div class="center">
+  <div class="big-text">
+    ПОШЁЛ НАХУЙ
+  </div>
+</div>
+
+</body>
+</html>
